--- a/EDA_determine anomalies.ipynb
+++ b/EDA_determine anomalies.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "(17233, 5)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,26 +311,6 @@
    ],
    "source": [
     "print(\"There are {}% of the outliers in the data\".format(round((outliers.shape[0])/total.shape[0]*100 ,0)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17233"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(outliers.velocity)"
    ]
   },
   {
@@ -545,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +625,7 @@
     "              marker=\"x\", color='green', label=\"level != final_level\", alpha=0.3)#\n",
     "plt.scatter(x='time', y='level', data=outliers, marker=\".\",\n",
     "            color='red', label=\"IQR outliers\", alpha=0.6)\n",
-    "plt.xlim('2015-05-17 00:00:00','2015-06-17 00:00:00')\n",
+    "plt.xlim('2015-05-17 00:00:00','2015-06-17 00:00:00') #adjustable\n",
     "plt.xlabel('Date time')\n",
     "plt.ylabel('Level')\n",
     "plt.title('Time Series of the level with possible anomalies (IQR outliers)');\n",
@@ -682,7 +662,7 @@
     "              marker=\"X\", color='green', label=\"level != final_level\", alpha=0.3)#\n",
     "plt.scatter(x='time', y='level', data=outliers,  marker=\".\",\n",
     "            color='red', label=\"IQR outliers\", alpha=0.6)\n",
-    "plt.xlim('2016-06-01 00:00:00','2016-06-09 00:00:00')#adjustible\n",
+    "plt.xlim('2016-06-01 00:00:00','2016-06-09 00:00:00') #adjustible\n",
     "plt.xlabel('Date time')\n",
     "plt.ylabel('Level')\n",
     "plt.title('Time Series of the level with possible anomalies (IQR outliers)');\n",
@@ -719,7 +699,7 @@
     "              marker=\"X\", color='green', label=\"level != final_level\", alpha=0.3)#\n",
     "plt.scatter(x='time', y='level', data=outliers,  marker=\"o\",\n",
     "            color='red', label=\"IQR outliers\", alpha=0.6)\n",
-    "plt.xlim('2016-09-01 00:00:00','2016-11-01 00:00:00');\n",
+    "plt.xlim('2016-09-01 00:00:00','2016-11-01 00:00:00') #adjustable\n",
     "plt.xlabel('Date time')\n",
     "plt.ylabel('Level')\n",
     "plt.title('Time Series of the level with possible anomalies (IQR outliers)');\n",
@@ -806,7 +786,7 @@
     "            label=\"velocity != final_velocity\", alpha=0.3)#possible anomalies, where velocity!=final_velocity\n",
     "plt.scatter(x='time', y='velocity', data=outliers, marker=\"o\",\n",
     "            color='red', label=\"IQR outliers\", alpha=0.6)\n",
-    "plt.xlim('2015-05-17 00:00:00','2015-06-17 00:00:00')\n",
+    "plt.xlim('2015-05-17 00:00:00','2015-06-17 00:00:00') #adjustable\n",
     "plt.xlabel('Date time')\n",
     "plt.ylabel('Velocity')\n",
     "plt.title('Time Series of the velocity with possible anomalies (IQR outliers)');\n",
@@ -1158,7 +1138,7 @@
     }
    ],
    "source": [
-    "#selecting model: 12-03-->12.23\n",
+    "#selecting model: 12-03-->12.23 #runs ca.20min\n",
     "# minimal AIC:\n",
     "print(\"minimal AIC: {}\".format(min(aic))) #ARIMA(1, 1, 1)x(0, 0, 0, 12)12"
    ]
@@ -1180,7 +1160,7 @@
     }
    ],
    "source": [
-    "#the best model is ARIMA(1, 1, 1)x(0, 0, 0, 12)12 \n",
+    "#selected the best model is ARIMA(1, 1, 1)x(0, 0, 0, 12)12 \n",
     "mod = sm.tsa.statespace.SARIMAX(y,\n",
     "                                order=(1, 1, 1),\n",
     "                                seasonal_order=(0, 0, 0, 12),\n",
@@ -1457,7 +1437,7 @@
     }
    ],
    "source": [
-    "#how many anomalies detected (in%):\n",
+    "#how many anomalies detected (in %):\n",
     "print(\"Percent of detected anomalies comprises {}%\".format(\n",
     "    round(df_predicted[df_predicted.anomaly!=0].shape[0]/len(df_predicted)*100,1)))"
    ]
@@ -1658,8 +1638,6 @@
     "            df_predicted[2:][ df_predicted[2:][\"anomaly\"]!=0][\"velocity\"], \n",
     "            s=1, color='red', label='anomaly')      #Plot anomalies according to the Arima model#\n",
     "\n",
-    "\n",
-    "\n",
     "plt.xlim(pd.to_datetime('2015-05-01 00:00:00'), pd.to_datetime('2015-06-1 00:00:00') ) # adjust: plot date interval\n",
     "plt.title('Sarima: predicted vs fact velocity over the time with detected anomalies', fontsize=16)\n",
     "plt.xlabel('Time')\n",
@@ -1707,7 +1685,6 @@
     "            df_predicted[2:][ df_predicted[2:][\"anomaly\"]!=0][\"velocity\"], \n",
     "            s=1, color='red', label='anomaly')      #Plot anomalies according to the Arima model#\n",
     "\n",
-    "\n",
     "plt.xlim(pd.to_datetime('2015-08-09 00:00:00'), pd.to_datetime('2015-09-01 00:00:00') ) # adjust: plot date interval\n",
     "plt.title('Sarima: predicted vs fact velocity over the time with detected anomalies', fontsize=16)\n",
     "plt.xlabel('Time')\n",
@@ -1738,7 +1715,6 @@
     "'''Plot predictions of Sarima model, close up'''\n",
     "'''velocity'''\n",
     "\n",
-    "\n",
     "plt.subplots(figsize=(24,6))\n",
     "\n",
     "plt.scatter(df_predicted.index, df_predicted[\"velocity\"], s=0.5, color='grey', alpha=0.6, label='Observed')#Observed data\n",
@@ -1755,8 +1731,6 @@
     "plt.scatter( df_predicted[2:][ df_predicted[2:][\"anomaly\"]!=0].index,  \n",
     "            df_predicted[2:][ df_predicted[2:][\"anomaly\"]!=0][\"velocity\"], \n",
     "            s=1, color='red', label='anomaly')      #Plot anomalies according to the Arima model#\n",
-    "\n",
-    "\n",
     "\n",
     "plt.xlim(pd.to_datetime('2017-08-01 00:00:00'), pd.to_datetime('2017-08-16 00:00:00') ) # adjust: plot date interval\n",
     "\n",
@@ -1782,7 +1756,7 @@
     }
    ],
    "source": [
-    "# The mean square error(SArima)\n",
+    "# The mean square error(Sarima)\n",
     "\n",
     "mse = ((df_predicted[\"velocity\"]-df_predicted[\"mean\"]) ** 2).mean()\n",
     "print('The Mean Squared Error of Arima prediction is {}'.format(round(mse, 4)))\n",
@@ -1830,7 +1804,8 @@
     }
    ],
    "source": [
-    "'''Plot forecast for SArima model'''\n",
+    "'''Plot forecast for Sarima model'''\n",
+    "'''velocity'''\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 5))\n",
     "\n",
@@ -2564,7 +2539,6 @@
    ],
    "source": [
     "#prepare joint table\n",
-    "\n",
     "df_predict= forecast[['ds','trend','yhat', 'yhat_lower', 'yhat_upper']].copy()\n",
     "\n",
     "df_predict = df_predict.merge(total[[\"velocity\", \"time\"]], left_on=\"ds\",\n",
@@ -2731,7 +2705,7 @@
     "\n",
     "plt.title('Prophet: predicted vs fact velocity over the time with detected anomalies', fontsize=16)\n",
     "plt.xlabel('Time')\n",
-    "plt.xlim('2015-08-01 00:00:00', '2015-09-01 00:00:00')\n",
+    "plt.xlim('2015-08-01 00:00:00', '2015-09-01 00:00:00') #adjustable\n",
     "plt.ylabel('Velocity')\n",
     "plt.legend(loc=\"best\")\n",
     "plt.show()"
@@ -2773,7 +2747,7 @@
     "plt.scatter(\"ds\", \"velocity\", data=df_predict[df_predict.anomaly!=0], s=1, color='red', label='anomaly')\n",
     "plt.title('Prophet: predicted vs fact velocity over the time with detected anomalies', fontsize=16)\n",
     "plt.xlabel('Time')\n",
-    "plt.xlim('2015-09-01 00:00:00', '2015-09-15 00:00:00')\n",
+    "plt.xlim('2015-09-01 00:00:00', '2015-09-15 00:00:00') #ajustable\n",
     "plt.ylabel('Velocity')\n",
     "plt.legend(loc=\"best\")\n",
     "plt.show()"
@@ -2816,7 +2790,7 @@
     "plt.title('Prophet: predicted vs fact velocity over the time with detected anomalies', fontsize=16)\n",
     "plt.xlabel('Time')\n",
     "\n",
-    "plt.xlim('2017-09-01 00:00:00', '2017-09-08 00:00:00') #change time if nessesery\n",
+    "plt.xlim('2017-09-01 00:00:00', '2017-09-08 00:00:00') #adjustable\n",
     "plt.ylabel('Velocity')\n",
     "plt.legend(loc=\"best\")\n",
     "plt.show()"
@@ -2863,7 +2837,7 @@
     "plt.title('Prophet: predicted vs fact velocity over the time with detected anomalies', fontsize=16)\n",
     "plt.xlabel('Time')\n",
     "\n",
-    "plt.xlim('2016-05-01 00:00:00','2016-08-01 00:00:00')\n",
+    "plt.xlim('2016-05-01 00:00:00','2016-08-01 00:00:00') #adjustable\n",
     "plt.ylabel('Velocity')\n",
     "plt.legend(loc=\"best\")\n",
     "plt.show()"
@@ -2884,214 +2858,12 @@
     }
    ],
    "source": [
-    "# Model errors (mean absolute error, Prophet)\n",
+    "# Model errors (mean absolute error)\n",
     "cmp_df = df_predict.copy()\n",
     "cmp_df['e'] = cmp_df['velocity'] - cmp_df['yhat']\n",
     "cmp_df['p'] = 100*cmp_df['e']/cmp_df['velocity']\n",
     "print('MAPE (mean absolute error in percent) – ', round(np.mean(abs(cmp_df[-predictions:]['p'])),1),'%')\n",
     "print('MAE (mean absolute error) – ', round(np.mean(abs(cmp_df[-predictions:]['e'])),2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ds</th>\n",
-       "      <th>trend</th>\n",
-       "      <th>yhat</th>\n",
-       "      <th>yhat_lower</th>\n",
-       "      <th>yhat_upper</th>\n",
-       "      <th>velocity</th>\n",
-       "      <th>time</th>\n",
-       "      <th>anomaly</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2014-09-01 00:00:00</td>\n",
-       "      <td>0.884041</td>\n",
-       "      <td>0.769073</td>\n",
-       "      <td>0.638318</td>\n",
-       "      <td>0.910133</td>\n",
-       "      <td>0.8883</td>\n",
-       "      <td>2014-09-01 00:00:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2014-09-01 00:05:00</td>\n",
-       "      <td>0.884041</td>\n",
-       "      <td>0.762807</td>\n",
-       "      <td>0.625242</td>\n",
-       "      <td>0.896443</td>\n",
-       "      <td>0.8856</td>\n",
-       "      <td>2014-09-01 00:05:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2014-09-01 00:10:00</td>\n",
-       "      <td>0.884040</td>\n",
-       "      <td>0.756566</td>\n",
-       "      <td>0.620326</td>\n",
-       "      <td>0.883453</td>\n",
-       "      <td>0.8379</td>\n",
-       "      <td>2014-09-01 00:10:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014-09-01 00:15:00</td>\n",
-       "      <td>0.884039</td>\n",
-       "      <td>0.750356</td>\n",
-       "      <td>0.621483</td>\n",
-       "      <td>0.877143</td>\n",
-       "      <td>0.8514</td>\n",
-       "      <td>2014-09-01 00:15:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014-09-01 00:20:00</td>\n",
-       "      <td>0.884039</td>\n",
-       "      <td>0.744183</td>\n",
-       "      <td>0.616257</td>\n",
-       "      <td>0.879219</td>\n",
-       "      <td>0.8487</td>\n",
-       "      <td>2014-09-01 00:20:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350415</th>\n",
-       "      <td>2017-12-30 17:15:00</td>\n",
-       "      <td>0.787814</td>\n",
-       "      <td>0.937007</td>\n",
-       "      <td>0.807823</td>\n",
-       "      <td>1.079990</td>\n",
-       "      <td>0.9270</td>\n",
-       "      <td>2017-12-30 17:15:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350416</th>\n",
-       "      <td>2017-12-30 17:20:00</td>\n",
-       "      <td>0.787813</td>\n",
-       "      <td>0.938900</td>\n",
-       "      <td>0.795864</td>\n",
-       "      <td>1.076108</td>\n",
-       "      <td>0.9297</td>\n",
-       "      <td>2017-12-30 17:20:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350417</th>\n",
-       "      <td>2017-12-30 17:25:00</td>\n",
-       "      <td>0.787812</td>\n",
-       "      <td>0.940880</td>\n",
-       "      <td>0.808143</td>\n",
-       "      <td>1.067642</td>\n",
-       "      <td>0.9459</td>\n",
-       "      <td>2017-12-30 17:25:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350418</th>\n",
-       "      <td>2017-12-30 17:30:00</td>\n",
-       "      <td>0.787810</td>\n",
-       "      <td>0.942938</td>\n",
-       "      <td>0.808524</td>\n",
-       "      <td>1.074541</td>\n",
-       "      <td>0.9306</td>\n",
-       "      <td>2017-12-30 17:30:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350419</th>\n",
-       "      <td>2017-12-31 17:30:00</td>\n",
-       "      <td>0.787443</td>\n",
-       "      <td>0.948706</td>\n",
-       "      <td>0.821413</td>\n",
-       "      <td>1.084716</td>\n",
-       "      <td>0.9603</td>\n",
-       "      <td>2017-12-31 17:30:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>350420 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        ds     trend      yhat  yhat_lower  yhat_upper  \\\n",
-       "0      2014-09-01 00:00:00  0.884041  0.769073    0.638318    0.910133   \n",
-       "1      2014-09-01 00:05:00  0.884041  0.762807    0.625242    0.896443   \n",
-       "2      2014-09-01 00:10:00  0.884040  0.756566    0.620326    0.883453   \n",
-       "3      2014-09-01 00:15:00  0.884039  0.750356    0.621483    0.877143   \n",
-       "4      2014-09-01 00:20:00  0.884039  0.744183    0.616257    0.879219   \n",
-       "...                    ...       ...       ...         ...         ...   \n",
-       "350415 2017-12-30 17:15:00  0.787814  0.937007    0.807823    1.079990   \n",
-       "350416 2017-12-30 17:20:00  0.787813  0.938900    0.795864    1.076108   \n",
-       "350417 2017-12-30 17:25:00  0.787812  0.940880    0.808143    1.067642   \n",
-       "350418 2017-12-30 17:30:00  0.787810  0.942938    0.808524    1.074541   \n",
-       "350419 2017-12-31 17:30:00  0.787443  0.948706    0.821413    1.084716   \n",
-       "\n",
-       "        velocity                time  anomaly  \n",
-       "0         0.8883 2014-09-01 00:00:00        0  \n",
-       "1         0.8856 2014-09-01 00:05:00        0  \n",
-       "2         0.8379 2014-09-01 00:10:00        0  \n",
-       "3         0.8514 2014-09-01 00:15:00        0  \n",
-       "4         0.8487 2014-09-01 00:20:00        0  \n",
-       "...          ...                 ...      ...  \n",
-       "350415    0.9270 2017-12-30 17:15:00        0  \n",
-       "350416    0.9297 2017-12-30 17:20:00        0  \n",
-       "350417    0.9459 2017-12-30 17:25:00        0  \n",
-       "350418    0.9306 2017-12-30 17:30:00        0  \n",
-       "350419    0.9603 2017-12-31 17:30:00        0  \n",
-       "\n",
-       "[350420 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_predict"
    ]
   },
   {
@@ -3123,7 +2895,7 @@
     "\n",
     "- The Prophet model allow to refer 19.5% of the initial data to anomalies. They are partually corresponding to the missed or corrected data in final_ columns\n",
     "\n",
-    "- The mean error is higher than in Sarima (MSE=0.07, MAPE=9.6%), but data do not looks overfitted, and reasonably accounting dayly and seasonal fluctuations.\n",
+    "- The mean error is higher than those in Sarima (MSE=0.07, MAPE=9.6%), but data do not looks overfitted, and reasonably accounting daily and seasonal fluctuations.\n",
     "\n",
     "- The Prophet model show the seasonal trends, which are in correspondence with those, performed with EDA. Short description:\n",
     "    \n",
@@ -3140,10 +2912,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**General Conclusions:**<a name=\"step7\"></a>\n",
+    "#### General Conclusions:<a name=\"step7\"></a>\n",
     "\n",
     "- IQR method allows to identify 5% anomalies in the data, Sarima model 7.2% and Prophet model 19.5%. The detected anomalies are partually corresponding to the missed or corrected data in final_ columns.\n",
-    "- Prophet model reflects seasonal trends and adjust velocity fluctuation within a reasonable confidence interval. Sarima model however having lower error, looks overfitted and forecasting velocity in a very wide interval. Therefore I would proceed future with Prophet model.\n"
+    "- Prophet model reflects seasonal trends and adjust velocity fluctuation within a reasonable confidence interval. However having lower error, Sarima model looks overfitted and forecast velocity in a very wide interval. Therefore I would proceed future with Prophet model."
    ]
   },
   {
